--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,8 @@
 	"manifest_version": 3,
 	"name": "Rokket",
 	"version": "0.0.1",
-	"action": { "default_popup": "index.html" },
 	"chrome_url_overrides": {
-		"newtab": "newtab.html"
+		"newtab": "src/newtab.html"
 	},
 	"content_scripts": [
 		{
