--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@crxjs/vite-plugin": "2.0.0-beta.9",
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
     "@tsconfig/svelte": "^3.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
     "svelte": "^3.54.0",
     "svelte-check": "^2.10.0",
+    "tailwindcss": "^3.2.4",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
